Unify same classes in dart clients
