# samples/standard/api/service/groups/common/common.go
@@ -1,0 +1,12 @@
+// Package common ...
+package common
+
+import "time"
+
+// Metadata ...
+type Metadata struct {
+	ID        string
+	Name      string
+	CreatedAt time.Time
+	UpdatedAt time.Time
+}
