# samples/standard/api/service/groups/company.go
@@ -1,0 +1,9 @@
+// Package groups ...
+package groups
+
+import "github.com/go-generalize/api_gen/v2/samples/standard/api/service/groups/common"
+
+// Company ...
+type Company struct {
+	Metadata common.Metadata
+}
